# clippie

./: .gitignore  Cargo.toml  LICENSE  README.md  install  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
src/: App.jsx  cli.jsx  cli.rs  clipboard.rs  commands.rs  config.rs  daemon.rs  db.rs  error.rs  main.rs  tui.rs
src/commands/: clear.rs  db.rs  install.rs  setup.js  setup.rs  status.rs
src/components/: ClickableRow.jsx  Header.jsx  Highlight.jsx  PreviewPanel.jsx  StatusBar.jsx
src/lib/: config.js  dates.js  db.js
src/tui/: app.rs  components.rs  events.rs  fuzzy.rs  handlers.rs  ui.rs
