[package]
name = "clippie"
version = "1.2.2"
edition = "2024"
authors = ["Jens Bech-Sørensen"]
license = "MIT"
description = "A fast, keyboard-driven clipboard history manager for macOS"
repository = "https://git.bechsor.no/jens/clippie"

[dependencies]
# CLI & Arguments
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"

# Database
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
chrono = "0.4"

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# TUI
ratatui = "0.26"
crossterm = { version = "0.27", features = ["events"] }
unicode-width = "0.1"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# macOS-specific clipboard access
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = ["NSString", "NSArray", "NSData"] }

# Utilities
sha2 = "0.10"
hex = "0.4"
dirs = "5.0"
once_cell = "1.19"
regex = "1.10"
signal-hook = "0.3"

[dev-dependencies]
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
strip = true
